# Update

./: .gitconfig  .gitignore  .gitmodules  CMakeLists.txt  README  README.md  Updater-vc11.sln  Updater.sln
UpdateTool/: AboutDlg.cpp  AboutDlg.h  CMakeLists.txt  CheckFile.cpp  CheckFile.h  Compress.cpp  Compress.h  MainDlg.cpp  MainDlg.h  UpdateTool.cpp  UpdateTools.rc  UpdateTools.vcproj  UpdateTools.vcxproj  UpdateTools.vcxproj.filters  resource.h  stdafx.cpp  stdafx.h
UpdateTool/ResizableLib/: RegisteredMsg.h  ResizableDialog.h  ResizableGrip.h  ResizableLayout.h  ResizableLib.h  ResizableMinMax.h  ResizableMsgSupport.h  ResizablePage.h  ResizableSheet.h  ResizableState.h  ResizableVersion.h
UpdateTool/res/: UpdateTools.rc
Updater/: CMakeLists.txt  MainDlg.cpp  MainDlg.h  Update.h  Update.rc  Update.vcproj  Update.vcxproj  Update.vcxproj.filters  inc.h  main.cpp  parser_http_date.cpp  resource.h  stdafx.cpp  stdafx.h  uncompress.cpp  uncompress.h  updater.cpp  updater.hpp  url.cpp  url.hpp
cmake/: FindWTL.cmake
common/md5/: CMakeLists.txt  md5.cpp  md5.h  md5.hpp
common/tinyxml/: CMakeLists.txt  echo.dsp  tinyXmlTest.vcproj  tinyXmlTestSTL.dsp  tinystr.cpp  tinyxml.h  tinyxmlSTL.vcproj  tinyxml_lib.vcproj  tinyxmlparser.cpp
common/tinyxml/lib/: tinyxml.lib  tinyxmld.lib
common/zlib-1.2.5/: CMakeLists.txt  ioinbuffer.c  ioinbuffer.h  zlib125.sln  zlib125.vcproj  zlib125.vcxproj  zlib125.vcxproj.filters
libupdate/: CMakeLists.txt  inc.h  libupdate.vcproj  libupdate.vcxproj  libupdate.vcxproj.filters  md5.cpp  md5.h  parser_http_date.cpp  uncompress.cpp  uncompress.h  uncompress.hpp  updater.cpp  updater.hpp  updater_impl.hpp  url.cpp  url.hpp
libupdate/tinyxml/: changes.txt  tinyXmlTest.dsp  tinyXmlTestSTL.vcproj  tinyxml.cpp  tinyxml.sln  tinyxmlSTL.dsp  tinyxml_lib.dsp  tinyxmlerror.cpp  xmltest.cpp
libupdate/zlib/: ReadMe.txt  zlib125.vcproj
